Code refactor to make swagger work properly
